--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/andrelandgraf/foodoo-backend/issues"
   },
-  "homepage": "https://github.com/andrelandgraf/foodoo-backend#readme"
+  "homepage": "https://github.com/andrelandgraf/foodoo-backend#readme",
+  "dependencies": {
+    "dotenv": "^8.0.0",
+    "express": "^4.17.0"
+  }
 }
