--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/andrelandgraf/foodoo-backend#readme",
   "dependencies": {
     "dotenv": "^8.0.0",
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "express-oauth-server": "^2.0.0"
   }
 }
