--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   },
   "homepage": "https://github.com/andrelandgraf/foodoo-backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
-    "express-oauth-server": "^2.0.0"
+    "oauth2-server": "^3.0.1"
   }
 }
