--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "oauth2-server": "^3.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2"
   }
 }
