--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "lodash": "^4.17.11",
     "oauth2-server": "^3.0.1"
   },
   "devDependencies": {
