--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "lodash": "^4.17.11",
+    "mongoose": "^5.5.10",
     "oauth2-server": "^3.0.1"
   },
   "devDependencies": {
-    "eslint": "^5.3.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2"
   }
